--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "awilix": "^12.0.4",
     "dotenv": "^16.4.7",
+    "node-cron": "^3.0.3",
     "openai": "^4.78.1",
     "p-limit": "^6.2.0",
     "pg": "^8.13.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.6",
+    "@types/node-cron": "^3.0.11",
     "reflect-metadata": "^0.2.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.2",
