--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pg": "^8.13.1",
     "typeorm": "^0.3.20",
     "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
